Updating Home Page

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://rahulmatthan.com/'
 pluralizeListTitles = false
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Rahul Matthan'
